# building-os

./: .env  .env.cn  .gitignore  Dockerfile  README.md  README.zh-CN.md  nx.json  package.json  pnpm-lock.yaml  sonar-project.properties
.devcontainer/: .env  .env.cn  Dockerfile  README.md  devcontainer.json  post_create.sh  setup_mirrors.sh  test_devcontainer.sh
.github/workflows/: ci.yml  code-quality.yml  devcontainer-test.yml  docker-build.yml
apps/backend/: README.md  __init__.py  main.py  pyproject.toml  start_server.sh  test.db
apps/backend/db/: database.py  models.py
apps/frontend/: package.json  project.json  vite.config.ts
apps/frontend/src/components/devices/: index.ts
