[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-home-system"
version = "0.1.0"
description = "An open-source smart home and factory automation system"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.21.0",
    "sqlalchemy==2.0.0",
    "pydantic>=2.0.1,<2.1.0",
    "opencv-python>=4.8.0",
    "numpy>=1.26.0",
    "pillow==9.5.0",
    "pyyaml>=6.0.1",
    "python-multipart==0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest==7.3.1",
    "pytest-cov==4.1.0",
    "black==23.3.0",
    "flake8==6.0.0",
    "isort==5.12.0",
    "mypy==1.3.0",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.setuptools]
packages = ["api", "db", "devices", "services", "utils"]
