[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-home-system"
version = "0.1.0"
description = "An open-source smart home and factory automation system"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.21.0",
    "sqlalchemy==2.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "python-multipart==0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest==7.3.1",
    "pytest-cov==4.1.0",
    "black==23.3.0",
    "flake8==6.0.0",
    "isort==5.12.0",
    "mypy==1.3.0",
]

[tool.hatch.envs.default.scripts]
server = "uvicorn main:app --reload --host 0.0.0.0 --port 8000"
test = "pytest"
lint = "flake8 ."
format = "black ."

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.setuptools]
packages = ["api", "db", "devices", "services", "utils"]

